--- a/style.css
+++ b/style.css
@@ -1,55 +1,54 @@
-#page-wrapper{
+#page-wrapper {
   position: relative;
-  mragin:0 auto;
-  width:1000px;
+  width: 1000px;
 }
-#nav-bar{
+#nav-bar {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   /* background-color: #cc0000;
   color: white; */
-  font-family: 'Exo 2', sans-serif;
-  padding:1em;
+  font-family: "Exo 2", sans-serif;
+  padding: 1em;
 }
 /* nav{
   padding: 0px 50px;
   background-color:crimson;
   
 } */
-img{
+img {
   width: auto;
   height: 140px;
 }
-#nav-container{
+#nav-container {
   display: flex;
   justify-self: unset;
   list-style-type: none;
   float: right;
   flex-direction: row;
 }
-.nav-link{
+.nav-link {
   padding: 10px 10px;
   color: red;
   background: azure;
   border-radius: 18px;
   margin-left: 10px;
 }
-.nav-link:hover{
-  color:white;
+.nav-link:hover {
+  color: white;
   background-color: rgb(13, 194, 133);
 }
-h3{
-  font-family: 'Courier New', Courier, monospace;
-  color:black;
-  margin-top:-30px;
+h3 {
+  font-family: "Courier New", Courier, monospace;
+  color: black;
+  margin-top: -30px;
 }
-a{
-  color:black;
+a {
+  color: black;
 }
-h2{
-  font-family: 'Courier New', Courier, monospace;
+h2 {
+  font-family: "Courier New", Courier, monospace;
   text-align: center;
 }
 #email {
@@ -73,49 +72,48 @@ h2{
   border-radius: 15px;
 }
 
-h1{
-  font-family:'Times New Roman', Times, serif;
+h1 {
+  font-family: "Times New Roman", Times, serif;
   margin-left: 18px;
 }
-p{
+p {
   margin-left: 36px;
   font-size: large;
 }
-#How-it-Works{
+#How-it-Works {
   margin-top: 50px;
   display: flex;
   justify-content: center;
 }
-h4{
+h4 {
   font-size: x-large;
-  background-color:orangered;
-  color:black;
+  background-color: orangered;
+  color: black;
   font-weight: bolder;
-  font-style:italic;
+  font-style: italic;
 }
 
-
-.iframe-container{
-  width:100%;
-  height:0;
+.iframe-container {
+  width: 100%;
+  height: 0;
   position: relative;
   padding-bottom: 56.25%;
 }
-.iframe-container iframe{
-  position:absolute;
-  top:0;
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-#price{
+#price {
   display: flex;
   flex-direction: row;
-  justify-content:space-around;
+  justify-content: space-around;
   box-sizing: border-box;
   flex-wrap: wrap;
 }
-#box1{
+#box1 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,7 +123,7 @@ h4{
   border: 1px solid #000;
   border-radius: 3px;
 }
-#box2{
+#box2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -134,7 +132,8 @@ h4{
   margin: 10px;
   border: 1px solid #000;
   border-radius: 3px;
-}#box3{
+}
+#box3 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -152,9 +151,9 @@ h5 {
   background-color: darkgoldenrod;
   color: rgb(117, 4, 4);
   padding: 0px 15px;
-  text-transform:uppercase ;
+  text-transform: uppercase;
 }
-li{
+li {
   font-size: x-large;
   list-style-type: none;
 }
